[package]
name = "tag-agents"
version = "0.1.0"
edition = "2021"
description  = "Simulate a multi agent system playing tag"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
console = "0.15.0"
clap = { version = "3.1.18", features = ["derive"] }
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }